# aithena

./: README.md  pyproject.toml
agents/ask-aithena-agent/: .bumpversion.cfg  .env-sample  Dockerfile_2  Dockerfile_G  README.md  build-docker.sh_2  build-docker.sh_G  pyproject.toml
apps/ai-review-app/: pyproject.toml
apps/ai-review-app/src/ai_review_app/: config.py  main.py  simple_main.py
apps/ai-review-app/src/ai_review_app/components/: __init__.py  chatbot_sidebar.py  cluster.py  context_manager.py  database.py  graph_view.py  llm_assistant.py  plot.py  reduce.py  selections.py
apps/ai-review-app/src/ai_review_app/llm/: __init__.py  ollama_utils.py  summaries.py  summarize.py
apps/ai-review-app/src/ai_review_app/models/: __init__.py  context.py  old_context.py  old_document.py  prompts.py  records.py  selection.py
apps/ai-review-app/src/ai_review_app/services/: call_llm.py  document_factory.py
apps/ai-review-app/src/ai_review_app/utils/: common.py  embed.py  exceptions.py  vuetify_df.py
apps/ai-review-app/tests/: input_data.py  test_data_model.py  test_llms.py
apps/ask-aithena-app/: .bumpversion.cfg  README.md  build-docker.sh  pyproject.toml
apps/chat-app/: Dockerfile  README.md
deployments/kubernetes/: README.md
diagrams/: AskAithena_Structure.md
embeddings/: .bumpversion.cfg  README.md  pyproject.toml
jobs/embed-arxiv/: Dockerfile  README.md  build-docker.sh
jobs/get-openalex/: .dockerignore  Dockerfile
services/aithena-services/: .dockerignore  .env.sample  README.md  compose.yml  pyproject.toml
(+41 files in other folders)
